--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
 
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>    
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
